# todo

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yaml
tests/: conftest.py  factories.py  test_auth.py  test_db.py  test_main.py  test_security.py  test_todos.py  test_users.py
todo/: database.py  main.py  models.py  schemas.py  security.py  settings.py
todo/routes/: auth.py  todos.py  users.py
